# piotr

./: .gitignore  Cargo.toml  README.md  config.example.json5  config.json5  dbus-session.conf  flake.nix  logfile  minimal-dbus.conf  qr.txt
.github/: dependabot.yml
.github/workflows/: claude-code.yml  update-flake.yml
docs/plans/: alternative-qr.md  signal-bot-plan.md  signal-wrapper-plan.md
migrations/: 20260212174800_create_profiles_table.sql  20260312170557_create_group_profiles_table.sql
scripts/: generate_qr.py  link_device.sh  setup_db.sh
src/: bot.rs  config.rs  db.rs  lib.rs  main.rs  state_manager.rs  utils.rs
src/ai/: memory.rs  mod.rs
src/signal/: mod.rs
