[package]
name = "piotr"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
google-cloud-auth = "0.13" # Using 0.13 as checked or use exact latest compatible
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
# presage = "0.3.0" # Removed: incorrect crate

# Future proofing deps
config = "0.13"
qr_code = "2.0.0" # For linking
image = "0.24.7" # For QR code image manipulation if needed
rand = "0.10.0"
textwrap = "0.16.2"
