[package]
name = "piotr"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json"] }
google-cloud-auth = "1.7.0"
dotenv = "0.15"
# presage = "0.3.0" # Removed: incorrect crate

# Future proofing deps
config = "0.15"
qr_code = "2.0.0" # For linking
image = "0.25" # For QR code image manipulation if needed
rand = "0.10.0"
textwrap = "0.16.2"
base64 = "0.22.1"
sha2 = "0.10.9"
hex = "0.4.3"
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio", "migrate"], default-features = false }
chacha20poly1305 = "0.10.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
hmac = "0.12.1"

[dev-dependencies]
tempfile = "3.27"
